--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
             <img src="logo.png" alt="Logo OBERT&LEC" class="logo"/>
             <nav>
                 <a href="index.html">Accueil</a>
-                <a href="services.html">Nos Services</a>
-                <a href="#contact">Contact</a>
             </nav>
         </div>
     </header>
@@ -28,19 +26,12 @@
     <main class="container">
         <section class="card">
             <h2>Nos Services</h2>
-            <p>Nous proposons des prestations professionnelles en :</p>
-            <ul>
-                <li><a href="services.html#elec">Électricité générale</a></li>
-                <li><a href="services.html#normes">Remise aux normes</a></li>
-                <li><a href="services.html#domotique">Domotique</a></li>
-                <li><a href="services.html#depannage">Dépannage</a></li>
-                <li><a href="services.html#interphone">Installation d'interphone</a></li>
-            </ul>
-        </section>
-        <section class="card" id="contact">
-            <h2>Contact</h2>
-            <p>Email : <a href="mailto:obert.nicolas@icloud.com">obert.nicolas@icloud.com</a></p>
-            <p>Téléphone : <a href="tel:0782412578">07 82 41 25 78</a></p>
+            <div class="services">
+                <a href="service-installation.html" class="service-item">Installation électrique</a>
+                <a href="service-normes.html" class="service-item">Remise aux normes</a>
+                <a href="service-depannage.html" class="service-item">Dépannage</a>
+                <a href="service-domotique.html" class="service-item">Domotique</a>
+            </div>
         </section>
     </main>
     <footer>
