--- a/index.html
+++ b/index.html
@@ -1,43 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>OBERT&LEC - Artisan de votre énergie connectée</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="style.css"/>
-</head>
-<body>
-    <header>
-        <div class="container">
-            <img src="logo.png" alt="Logo OBERT&LEC" class="logo"/>
-            <nav>
-                <a href="index.html">Accueil</a>
-            </nav>
-        </div>
-    </header>
-    <section class="hero">
-        <div class="container">
-            <h1>OBERT&LEC</h1>
-            <p class="slogan">Artisan de votre énergie connectée</p>
-        </div>
-    </section>
-    <main class="container">
-        <section class="card">
-            <h2>Nos Services</h2>
-            <div class="services">
-                <a href="service-installation.html" class="service-item">Installation électrique</a>
-                <a href="service-normes.html" class="service-item">Remise aux normes</a>
-                <a href="service-depannage.html" class="service-item">Dépannage</a>
-                <a href="service-domotique.html" class="service-item">Domotique</a>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 OBERT&LEC - Tous droits réservés.</p>
-        </div>
-    </footer>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>OBERT&LEC</title></head><body></body></html>
