--- a/service-domotique.html
+++ b/service-domotique.html
@@ -2,24 +2,22 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Domotique - OBERT&LEC</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
     <header>
         <div class="container">
-            <a href="index.html"><img src="logo.png" alt="Logo OBERT&LEC" class="logo" /></a>
-            <nav>
-                <a href="index.html">Accueil</a>
-            </nav>
+            <a href="index.html"><img src="logo.png" alt="Logo OBERT&LEC" class="logo-large"/></a>
         </div>
     </header>
     <main class="container">
-        <section class="card">
+        <section class="card fade-in">
             <h2>Domotique</h2>
-            <p>Installation de systèmes intelligents pour piloter vos volets, lumières et équipements à distance. Partenaire Somfy, Legrand et Hager.</p>
+            <img src="images/domotique.jpg" alt="Domotique" style="width:100%; border-radius:8px; margin-bottom:1rem;">
+            <p>Installation de systèmes domotiques (éclairages, volets, chauffage) avec contrôle via smartphone. Partenaire Somfy, Legrand, Hager.</p>
             <a href="mailto:obert.nicolas@icloud.com?subject=Demande de devis - Domotique" class="button">Demander un devis</a>
         </section>
     </main>
