--- a/service-electricite.html
+++ b/service-electricite.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Dépannage - OBERT&LEC</title>
+    <title>Électricité générale - OBERT&LEC</title>
     <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
@@ -15,10 +15,10 @@
     </header>
     <main class="container">
         <section class="card fade-in">
-            <h2>Dépannage</h2>
-            <img src="images/depannage.jpg" alt="Dépannage" style="width:100%; border-radius:8px; margin-bottom:1rem;">
-            <p>Intervention rapide en cas de panne électrique. Dépannage 7j/7 en Île-de-France, pour tout type de tableau ou réseau.</p>
-            <a href="mailto:obert.nicolas@icloud.com?subject=Demande de devis - Dépannage" class="button">Demander un devis</a>
+            <h2>Électricité générale</h2>
+            <img src="images/electricite.jpg" alt="Électricité générale" style="width:100%; border-radius:8px; margin-bottom:1rem;">
+            <p>Réalisation complète de vos installations électriques : intérieur, extérieur, rénovation ou neuf.</p>
+            <a href="mailto:obert.nicolas@icloud.com?subject=Demande de devis - Électricité générale" class="button">Demander un devis</a>
         </section>
     </main>
     <footer>
