--- a/service-normes.html
+++ b/service-normes.html
@@ -2,24 +2,22 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Remise aux normes - OBERT&LEC</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
     <header>
         <div class="container">
-            <a href="index.html"><img src="logo.png" alt="Logo OBERT&LEC" class="logo" /></a>
-            <nav>
-                <a href="index.html">Accueil</a>
-            </nav>
+            <a href="index.html"><img src="logo.png" alt="Logo OBERT&LEC" class="logo-large"/></a>
         </div>
     </header>
     <main class="container">
-        <section class="card">
+        <section class="card fade-in">
             <h2>Remise aux normes</h2>
-            <p>Mise à jour de vos installations anciennes pour répondre aux exigences de la norme NF C 15-100, garantissant votre sécurité.</p>
+            <img src="images/normes.jpg" alt="Remise aux normes" style="width:100%; border-radius:8px; margin-bottom:1rem;">
+            <p>Mise à jour de vos installations selon la norme NF C 15-100. Sécurité, conformité, fiabilité.</p>
             <a href="mailto:obert.nicolas@icloud.com?subject=Demande de devis - Remise aux normes" class="button">Demander un devis</a>
         </section>
     </main>
