--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>OBERT&LEC</title></head><body></body></html>
+
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>OBERT&LEC - Artisan de votre énergie connectée</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <img src="logo.png" alt="Logo OBERT&LEC" class="logo"/>
+            <nav>
+                <a href="index.html">Accueil</a>
+                <a href="services.html">Nos Services</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
+    </header>
+    <section class="hero">
+        <div class="container">
+            <h1>OBERT&LEC</h1>
+            <p class="slogan">Artisan de votre énergie connectée</p>
+        </div>
+    </section>
+    <main class="container">
+        <section class="card">
+            <h2>Nos Services</h2>
+            <p>Nous proposons des prestations professionnelles en :</p>
+            <ul>
+                <li><a href="services.html#elec">Électricité générale</a></li>
+                <li><a href="services.html#normes">Remise aux normes</a></li>
+                <li><a href="services.html#domotique">Domotique</a></li>
+                <li><a href="services.html#depannage">Dépannage</a></li>
+                <li><a href="services.html#interphone">Installation d'interphone</a></li>
+            </ul>
+        </section>
+        <section class="card" id="contact">
+            <h2>Contact</h2>
+            <p>Email : <a href="mailto:obert.nicolas@icloud.com">obert.nicolas@icloud.com</a></p>
+            <p>Téléphone : <a href="tel:0782412578">07 82 41 25 78</a></p>
+        </section>
+    </main>
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 OBERT&LEC - Tous droits réservés.</p>
+        </div>
+    </footer>
+</body>
+</html>
