--- a/service-depannage.html
+++ b/service-depannage.html
@@ -1,30 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Dépannage - OBERT&LEC</title>
-    <link href="style.css" rel="stylesheet"/>
-</head>
-<body>
-    <header>
-        <div class="container">
-            <a href="index.html"><img src="logo.png" alt="Logo OBERT&LEC" class="logo-large"/></a>
-        </div>
-    </header>
-    <main class="container">
-        <section class="card fade-in">
-            <h2>Dépannage</h2>
-            <img src="images/depannage.jpg" alt="Dépannage" style="width:100%; border-radius:8px; margin-bottom:1rem;">
-            <p>Intervention rapide en cas de panne électrique. Dépannage 7j/7 en Île-de-France, pour tout type de tableau ou réseau.</p>
-            <a href="mailto:obert.nicolas@icloud.com?subject=Demande de devis - Dépannage" class="button">Demander un devis</a>
-        </section>
-    </main>
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 OBERT&LEC - Tous droits réservés.</p>
-        </div>
-    </footer>
-</body>
-</html>
+<html><head><link rel='stylesheet' href='style.css'></head><body><div class='container'><h2>Dépannage</h2><img src='depannage.jpg' width='100%'><p>Dépannage rapide 7j/7 en Île-de-France.</p><a href='mailto:obert.nicolas@icloud.com?subject=Demande de devis - Dépannage'>Demander un devis</a></div></body></html>
