--- a/service-domotique.html
+++ b/service-domotique.html
@@ -1,30 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Domotique - OBERT&LEC</title>
-    <link href="style.css" rel="stylesheet"/>
-</head>
-<body>
-    <header>
-        <div class="container">
-            <a href="index.html"><img src="logo.png" alt="Logo OBERT&LEC" class="logo-large"/></a>
-        </div>
-    </header>
-    <main class="container">
-        <section class="card fade-in">
-            <h2>Domotique</h2>
-            <img src="images/domotique.jpg" alt="Domotique" style="width:100%; border-radius:8px; margin-bottom:1rem;">
-            <p>Installation de systèmes domotiques (éclairages, volets, chauffage) avec contrôle via smartphone. Partenaire Somfy, Legrand, Hager.</p>
-            <a href="mailto:obert.nicolas@icloud.com?subject=Demande de devis - Domotique" class="button">Demander un devis</a>
-        </section>
-    </main>
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 OBERT&LEC - Tous droits réservés.</p>
-        </div>
-    </footer>
-</body>
-</html>
+<html><head><link rel='stylesheet' href='style.css'></head><body><div class='container'><h2>Domotique</h2><img src='domotique.jpg' width='100%'><p>Contrôle connecté de votre maison (éclairages, volets, chauffage).</p><a href='mailto:obert.nicolas@icloud.com?subject=Demande de devis - Domotique'>Demander un devis</a></div></body></html>
