--- a/service-normes.html
+++ b/service-normes.html
@@ -1,30 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Remise aux normes - OBERT&LEC</title>
-    <link href="style.css" rel="stylesheet"/>
-</head>
-<body>
-    <header>
-        <div class="container">
-            <a href="index.html"><img src="logo.png" alt="Logo OBERT&LEC" class="logo-large"/></a>
-        </div>
-    </header>
-    <main class="container">
-        <section class="card fade-in">
-            <h2>Remise aux normes</h2>
-            <img src="images/normes.jpg" alt="Remise aux normes" style="width:100%; border-radius:8px; margin-bottom:1rem;">
-            <p>Mise à jour de vos installations selon la norme NF C 15-100. Sécurité, conformité, fiabilité.</p>
-            <a href="mailto:obert.nicolas@icloud.com?subject=Demande de devis - Remise aux normes" class="button">Demander un devis</a>
-        </section>
-    </main>
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 OBERT&LEC - Tous droits réservés.</p>
-        </div>
-    </footer>
-</body>
-</html>
+<html><head><link rel='stylesheet' href='style.css'></head><body><div class='container'><h2>Remise aux normes</h2><img src='normes.jpg' width='100%'><p>Mise en conformité selon la norme NF C 15-100.</p><a href='mailto:obert.nicolas@icloud.com?subject=Demande de devis - Remise aux normes'>Demander un devis</a></div></body></html>
