--- a/service-electricite.html
+++ b/service-electricite.html
@@ -1,30 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Électricité générale - OBERT&LEC</title>
-    <link href="style.css" rel="stylesheet"/>
-</head>
-<body>
-    <header>
-        <div class="container">
-            <a href="index.html"><img src="logo.png" alt="Logo OBERT&LEC" class="logo-large"/></a>
-        </div>
-    </header>
-    <main class="container">
-        <section class="card fade-in">
-            <h2>Électricité générale</h2>
-            <img src="images/electricite.jpg" alt="Électricité générale" style="width:100%; border-radius:8px; margin-bottom:1rem;">
-            <p>Réalisation complète de vos installations électriques : intérieur, extérieur, rénovation ou neuf.</p>
-            <a href="mailto:obert.nicolas@icloud.com?subject=Demande de devis - Électricité générale" class="button">Demander un devis</a>
-        </section>
-    </main>
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 OBERT&LEC - Tous droits réservés.</p>
-        </div>
-    </footer>
-</body>
-</html>
+<html><head><link rel='stylesheet' href='style.css'></head><body><div class='container'><h2>Électricité générale</h2><img src='electricite.jpg' width='100%'><p>Installation intérieure et extérieure pour maisons et appartements.</p><a href='mailto:obert.nicolas@icloud.com?subject=Demande de devis - Électricité générale'>Demander un devis</a></div></body></html>
